feat: traduzindo o Voltar para o inicio

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -3,6 +3,7 @@
     "sobre-mim": "About me",
     "projetos": "Projects",
     "contato" : "Contact",
+    "inicio" : "Back to home",
     "produto" : "Brazilian Product designer",
     "formacao1" : "Graduated in Graphic Design from the University of Franca and specialist in UX Designer from Unochapecó. I have worked as a designer for over",
     "formacao2" : "5 years",
