feat: translate franquias page

--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -44,6 +44,66 @@
     "personassection" : "A ideia inicial foi primeiro conhecer nosso público, identificar personas para gerar produtos que fizessem parte do dia a dia destas pessoas, entender o ambiente onde trabalham, o local onde moral, um pouco da jornada fora da empresa, cargos, e claro seus dados pessoais como idade, objetivos e história. Foi disparado uma pesquisa para a base de clientes com o objetivo de coletar estes dados. E nesta pesquisa conseguimos identificar três perfis distintos de pessoas.",
     "acessardesign" : "ACESSAR DESIGN SYSTEM ㅤ",
     "proximoprojeto" : "Próximo Projeto",
-    "appgestao" : "Aplicativo de gestão de academias e treinos"
+    "appgestao" : "Aplicativo de gestão de academias e treinos",
+    "titlefranquias" : "Unificando a gestão das franquias de escola de idiomas do grupo pearson",
+    "mypaper" : "Meu papel",
+    "seniorproduct" : "Product Designer Principal",
+    "projecttime" : "TEMPO DE PROJETO",
+    "intruduction" : "Introdução",
+    "pearsontext" : "A Pearson é a maior empresa de educação do mundo e uma das maiores do Brasil. Possuem diversas redes de franquias, e neste projeto vamos falar especificamente de duas delas: Wizard by Pearson e <strong>Yázigi</strong>",
+    "spontetext" : "Sponte é uma empresa que oferece sistemas de gestão dentro dos segmentos de: educação básica, escolas de idioma e cursos técnicos e profissionalizantes. Estes produtos agregam funcionalidades de gestão: Gestão pedagógica, financeira e administrativa. Além de uma funcionalidade de captação de alunos.",
+    "aboutproject" : "Sobre o projeto",
+    "aboutprojectText" : "O Projeto em questão nasceu da necessidade de melhorar o controle da Pearson em relação às redes de franquias, para isso, decidiram utilizar apenas um sistema de gestão para as duas redes, situação que até então era livre para que o franqueado decidisse qual sistema contratar. Para padronização das redes foi escolhido o sistema de gestão Sponte idiomas, e após a implantação, críticas sobre o modelo de gestão começaram surgir.",
+    "theteam": "O time",
+    "theteamtext": "Dentro de um backlog previamente criado, o objetivo do projeto era atualizar/refazer partes do sistema para atender as necessidades pedagógicas das escolas das redes Wizard e Yázigi.",
+    "theteamtext2": "Ao inicia-lo, o projeto não tinha metodologia e por conta disso este início do foi marcado por euforia, desalinhamento e confusão. Após os primeiros erros, tivemos liberdade para passar nossa perspectiva dos principais pontos a melhorar e iniciar uma nova etapa para o projeto.",
+    "initialchallenges": "desafios iniciais",
+    "initialchallengestext": "• Falta de contato com os usuários",
+    "initialchallengestext2": "• Centralização das dores no time de tecnologia da Pearson",
+    "initialchallengestext3": "• Falta de validação com os usuários finais",
+    "initialchallengestext4": "• Nenhum dos stakeholders (Devs, Negócio e cliente) nunca haviam tido contato com time de Design",
+    "cultureandmethodology": "Culture and Methodology",
+    "cultureandmethodologytext": "Para promover a cultura, iniciamos com workshop’s entre os envolvidos e apresentamos uma metodologia com base em outras experiências profissionais semelhantes que tivemos.",
+    "cultureandmethodologytext2": "Percebemos que num primeiro momento era necessário uma perspectiva um pouco mais ampla sobre como as coisas se relacionavam. Para isso criamos um framework de entendimento e exploração com o objetivo de fazermos uma leitura coerente às verdadeiras necessidades do dia-a-dia dos usuários, e apenas depois organizar e priorizar o backlog.",
+    "discovery": "descoberta",
+    "discoveryText": "Mergulhamos de cabeça para saber as principais diferenças entre Wizard e Yázigi. Partimos dos manuais que a própria marca disponibilizava. Mas para entender como funcionavam as escolas na prática, iniciamos uma bateria de pesquisas com franqueados/colaboradores, consultores Pearson e demais envolvidos.",
+    "discoveryText2": "Após a série de pesquisa, refinamos as personas existentes, criamos outras que também eram importantes e passamos a abordar 100% o funcionamento das escolas.",
+    "persontext": "Queríamos entender como era a jornada do aluno e consequentemente como, quando e porquê nosso usuário iria se relacionar com o sistema. Para isso criamos um calendário, que simulava o comportamento das escolas em relação a um aluno que se matriculou e iria estudar.",
+    "keyinsights": "Principais Insights",
+    "pearsonli": "Identificação de quais áreas do sistema não estavam sendo claras para o usuário",
+    "pearsonli2": "Falta de padronização da franquia com alguns protocolos",
+    "pearsonli3": "Identificação de quais processos da franquia o sistema não se adequava ou não dava apoio;",
+    "pearsonli4": "Identificação de diversos pontos de dor de maneira detalhada;",
+    "pearsonli5": "Quais problemas nasciam da falta de comunicação entre franqueado, franqueador e fornecedor;",
+    "pearsonli6": "Processos desconhecidos por nós como fornecedores da solução, que era comum na rede.",
+    "validation": "validação",
+    "validationText": "Com base em tudo que coletamos na etapa de descoberta validamos um fluxograma simplificado que englobava a jornada do aluno desde sua entrada até conclusão ou desistência do curso. Dividimos a jornada do aluno em quatro momentos diferentes.",
+    "validationli": "Interessado",
+    "validationli2": "Pré-matrícula",
+    "validationli3": "Estudando",
+    "validationli4": "Rematrícula",
+    "projectarchitecture": "arquitetura de informação do projeto",
+    "projectarchitecturetext": "arquitetura de informação do projeto",
+    "projectarchitecturetext2": "Neste momento ficou claro quais mudanças estruturais eram necessárias. Então para termos um visão um pouco mais sofisticada e poder sugerir ações concretas, partimos para a próxima etapa.",
+    "Prioritization": "Priorização",
+    "Prioritization2": "Olhamos para nosso backlog, nossas limitações com relação a tecnologia, as exigências do cliente e começamos a pensar em um sistema atendendo tudo. E após encontrarmos uma estrutura que atendesse às exigências definimos um cronograma de desenvolvimento.o",
+    "personregistration": "Funcionalidade de cadastro de pessoa",
+    "personregistrationtext": "Unificar todos os cadastros do sistema que envolvem pessoas em um único cadastro, facilitando a identificação destas pessoas e minimizando a quantidade de dados replicados.",
+    "informationarchitecture": "arquitetura de informação",
+    "informationarchitecturetext": "O cadastro de pessoas é o processo que liga o que processo de captação de leads até o fechamento de matrículas e o processo Pedagógico, onde teremos os alunos, responsáveis e ex-alunos. Ou seja o cadastro de pessoa será utilizado frequentemente por todos os usuários da rede para que sirva de pilar para a manutenção dos dados das pessoas vinculadas as escolas.",
+    "informationarchitecturetext2": "Sendo assim o cadastro também será “único”, onde herdará prioritariamente as informações do novo workflow comercial.",
+    "ideation": "ideação",
+    "ideationtext": "Unificando os cadastros de interessado, aluno e responsável, montando como se fosse uma ficha da pessoa. Um painel onde pode-se encontrar todas as informações analíticas desta pessoa de forma rápida.",
+    "ideationtext2": "Nosso objetivo era trabalhar com os principais dados, priorizando os mais importantes e frequentemente requisitados. Queríamos algo minimalista mas gerenciável.",
+    "ideationtext3": "Realizamos o processo de benchmark onde utilizamos referências de produtos internos, e de produtos do mercado, além de experiências passadas.",
+    "testing": "testes",
+    "testingtext": "Por conta de um alinhamento próximo do usuário, tinhamos conhecimento que a solução estava muito próxima do que realmente fazia sentido para o dia-a-dia das escolas. Por conta disso, foram ignorados testes de guerrilhas, testes A/B e outros.",
+    "testingtext2": "Foram criadas 5 tarefas principais com jornadas distintas.",
+    "testingtext3": "Primeiramente o teste foi aplicado aos consultores internos, e após ajustes, aplicamos com 6 usuários chave (Usuários com perfis bem distintos, algumas com grande massa de alunos e outras menores).",
+    "testingtext4": "Com um feedback de poucos ajustes, selecionamos, priorizamos e executamos os principais, apresentamos aos usuários novamente dentro do comitê de franqueados e após concordância geral o protótipo passou para etapa de entrega.",
+    "testresults": "Resultado dos testes",
+    "testresultstext": "Com um feedback de poucos ajustes, selecionamos, prioriz amos e executamos os principais, apresentamos aos usuários novamente dentro do comitê de franqueados e após concordância geral o protótipo passou para etapa de entrega.",
+    "testresultstext2": "Após isso o projeto foi refinado junto a equipe de desenvolvimento e encaixado na esteira de desenvolvimento.",
+    "allrightsreserved": "Henrique Vinhola © 2023. Todos os Direitos Reservados"
   }
 }
