--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -44,6 +44,66 @@
     "personassection" : "The initial idea was to first understand our audience, identify personas to generate products that would become part of these people's daily lives. This involved understanding their work environment, location, values, a bit of their journey outside the company, roles, and, of course, personal data such as age, goals, and history. A survey was conducted among the customer base to collect this data. In this survey, we identified three distinct profiles of individuals.",
     "acessardesign" : "ACCESS DESIGN SYSTEM ㅤ",
     "proximoprojeto" : "Next Project",
-    "appgestao" : "Gym and Training Management App"
+    "appgestao" : "Gym and Training Management App",
+    "titlefranquias" : "Unifying the Management of Pearson Group's Language School Franchises",
+    "mypaper" : "MY PAPER",
+    "seniorproduct" : "Senior Product Designer",
+    "projecttime": "Project Timeline",
+    "intruduction": "Introduction",
+    "pearsontext": "Pearson is the world's largest education company and one of the largest in Brazil. They have various franchise networks, and in this project, we'll specifically discuss two of them: Wizard by Pearson and Yázigi.",
+    "spontetext": "Sponte is a company that provides management systems within the segments of basic education, language schools, and technical and vocational courses. These products encompass management functionalities: Pedagogical, financial, and administrative management, as well as a student acquisition functionality.",
+    "aboutproject": "About the Project",
+    "aboutprojectText": "This project emerged from the need to enhance Pearson's control over its franchise networks. They decided to utilize a single management system for both networks, a situation that had previously been left to the franchisee's discretion. To standardize the networks, the Sponte Idiomas management system was chosen. However, after implementation, criticisms regarding the management model began to arise.",
+    "theteam": "The Team",
+    "theteamtext": "Within a previously created backlog, the project's goal was to update/redo parts of the system to meet the pedagogical needs of Wizard and Yázigi network schools.",
+    "theteamtext2": "At the project's outset, there was no methodology, leading to a beginning marked by enthusiasm, misalignment, and confusion. After initial mistakes, we had the freedom to share our perspective on the main areas for improvement and begin a new phase for the project.",
+    "initialchallenges": "Initial Challenges",
+    "initialchallengestext": "• Lack of contact with users",
+    "initialchallengestext2": "• Centralization of issues within the Pearson technology team",
+    "initialchallengestext3": "• Lack of validation with end users",
+    "initialchallengestext4": "• None of the stakeholders (Developers, Business, and Client) had previously interacted with the Design team",
+    "cultureandmethodology": "Culture and Methodology",
+    "cultureandmethodologytext": "To promote the culture, we began with workshops among the involved parties and introduced a methodology based on similar professional experiences we had.",
+    "cultureandmethodologytext2": "We realized that, initially, a slightly broader perspective on how things related to each other was necessary. For this purpose, we created an understanding and exploration framework aiming to make a coherent assessment of the true day-to-day needs of users, and only then organize and prioritize the backlog.",
+    "discovery": "Discovery",
+    "discoveryText": "We delved into understanding the main differences between Wizard and Yázigi. We started from the manuals provided by the brands themselves. But to understand how schools worked in practice, we began a series of research with franchisees/employees, Pearson consultants, and other involved parties.",
+    "discoveryText2": "After the series of research, we refined existing personas, created others that were also important, and started addressing the functioning of the schools entirely.",
+    "persontext": "We wanted to understand the student's journey and consequently how, when, and why our user would interact with the system. For this, we created a calendar that simulated the schools' behavior regarding a student who enrolled and would study.",
+    "keyinsights": "Key Insights",
+    "pearsonli": "Identification of unclear areas of the system for the user",
+    "pearsonli2": "Lack of franchise standardization with some protocols",
+    "pearsonli3": "Identification of franchise processes that the system did not fit or support;",
+    "pearsonli4": "Identification of various detailed pain points;",
+    "pearsonli5": "Problems arising from lack of communication between franchisee, franchisor, and supplier;",
+    "pearsonli6": "Processes unknown to us as solution providers, which were common in the network.",
+    "validation": "Validation",
+    "validationText": "Based on everything we collected in the discovery phase, we validated a simplified flowchart that encompassed the student's journey from entry to completion or withdrawal from the course. We divided the student's journey into four different moments.",
+    "validationli": "Interested",
+    "validationli2": "Pre-enrollment",
+    "validationli3": "Studying",
+    "validationli4": "Re-enrollment",
+    "projectarchitecture": "Project Information Architecture",
+    "projectarchitecturetext": "Project Information Architecture",
+    "projectarchitecturetext2": "At this point, it became clear which structural changes were necessary. So, to have a slightly more sophisticated view and suggest concrete actions, we moved on to the next stage.",
+    "Prioritization": "Prioritization",
+    "Prioritization2": "We looked at our backlog, our technological limitations, the client's requirements, and started thinking about a system that would meet everything. After finding a structure that met the requirements, we defined a development schedule.",
+    "personregistration": "Person Registration Functionality",
+    "personregistrationtext": "Unify all system registrations involving people into a single registration, facilitating the identification of these individuals and minimizing replicated data.",
+    "informationarchitecture": "Information Architecture",
+    "informationarchitecturetext": "The person registration process connects the lead acquisition process to the closure of enrollments and the Pedagogical process, where we have students, guardians, and former students. That is, the person registration will be frequently used by all network users to serve as a pillar for maintaining data related to people linked to the schools.",
+    "informationarchitecturetext2": "Therefore, the registration will also be 'unique,' primarily inheriting information from the new commercial workflow.",
+    "ideation": "Ideation",
+    "ideationtext": "By unifying the registrations of interested parties, students, and guardians, we created something like a person's file. A dashboard where all analytical information about this person could be quickly accessed.",
+    "ideationtext2": "Our goal was to work with the main data, prioritizing the most important and frequently requested ones. We wanted something minimalist but manageable.",
+    "ideationtext3": "We conducted a benchmarking process using references from internal products and products in the market, as well as past experiences.",
+    "testing": "Testing",
+    "testingtext": "Due to close alignment with the user, we knew that the solution was very close to what truly made sense for the schools' day-to-day operations. Therefore, guerrilla tests, A/B tests, and others were ignored.",
+    "testingtext2": "Five main tasks with distinct journeys were created.",
+    "testingtext3": "Initially, the test was applied to internal consultants, and after adjustments, it was applied to 6 key users (users with very different profiles, some with a large number of students and others with fewer).",
+    "testingtext4": "With feedback requiring few adjustments, we selected, prioritized, and executed the main ones, presented them to the users again within the franchise committee, and after general agreement, the prototype moved on to the delivery stage.",
+    "testresults": "Test Results",
+    "testresultstext": "With feedback requiring few adjustments, we selected, prioritized, and executed the main ones, presented them to the users again within the franchise committee, and after general agreement, the prototype moved on to the delivery stage.",
+    "testresultstext2": "After that, the project was refined with the development team and integrated into the development pipeline.",
+    "allrightsreserved": "Henrique Vinhola © 2023. All Rights Reserved"
   }
 }
